k8s/bot-a.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bota
  namespace: heriot-watt-julian
  labels:
    app: bota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bota
  template:
    metadata:
      labels:
        app: bota
    spec:
      volumes:
      - name: logs
        hostPath:
          path: /XXX/heriot-watt-julian/volumes/bota
          type: Directory
      containers:
      - name: bota
        image: jf2009bot:v2
        imagePullPolicy: Never
        command: ["python"]
        args: ["src/main.py"]
        volumeMounts:
        - name: logs
          mountPath: /app/logs
