k8s/bot-b.deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botb
  namespace: heriot-watt-julian
  labels:
    app: botb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botb
  template:
    metadata:
      labels:
        app: botb
    spec:
      volumes:
      - name: logs
        hostPath:
          path: /XXX/heriot-watt-julian/volumes/botb
          type: Directory
      containers:
      - name: botb
        image: jf2009bot:v2
        imagePullPolicy: Never
        command: ["python"]
        args: ["src/main.py"]
        volumeMounts:
        - name: logs
          mountPath: /app/logs
