k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ducklingsvc
  namespace: heriot-watt-julian
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: duckling
